--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 <body>
 
 <div id="app">
-    <p v-cloak>{{msg}}</p>
+    <!--v-cloak解决插值表达式闪烁问题-->
+    <p v-cloak>{{msg}}+++++</p>
+    <!--和插值表达式类似，默认没有闪烁问题-->
+    <p v-text="msg"></p>
+
+    <!--插值表达式可以在两边加入其它内容，v-text不能-->
 </div>
 
 
