--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:v-on="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -27,6 +27,13 @@
     <!--v-bind用于绑定属性，后面的内容当作js表达式来解析，简写为':'-->
     <input type="button" value="按钮" :title="mytitle + '123'">
 
+    <br>
+    <!--v-on用于绑定事件-->
+    <input type="button" value="按钮" v-on:click="show">
+    <input type="button" value="按钮" v-on:mouseover="show">
+
+
+
 </div>
 
 
@@ -41,7 +48,13 @@
             msg: 'hello vue',
             msg2: '<h1>哈哈哈</h1>',
             mytitle: '这是一个title'
+        },
+        methods: { //在这里定义vue可用的方法
+            show: function () {
+                alert('hello')
+            }
         }
+
     })
 </script>
 </html>
