--- a/01 vue基本语法.html
+++ b/01 vue基本语法.html
@@ -28,9 +28,9 @@
     <input type="button" value="按钮" :title="mytitle + '123'">
 
     <br>
-    <!--v-on用于绑定事件-->
-    <input type="button" value="按钮" v-on:click="show">
-    <input type="button" value="按钮" v-on:mouseover="show">
+    <!--v-on用于绑定事件，简写为'@'-->
+    <input type="button" value="按钮" @click="show">
+    <input type="button" value="按钮" @mouseover="show">
 
 
 
