--- a/16 动画-列表动画.html
+++ b/16 动画-列表动画.html
@@ -50,7 +50,7 @@
     <!-- <ul> -->
     <!-- 在使用列表过渡的时候，如果需要过渡的元素，是通过 v-for 循环渲染出来的，
         不能使用transition包裹，需要使用transitionGroup -->
-    <!-- 给transition-group设置appear获得入场动画 -->
+    <!-- 给transition-group设置appear获得「入场」动画 -->
     <!-- 给transition-group设置tag属性，指定transition-group渲染为什么样的元素，如果不指定，默认渲染为span元素 -->
     <transition-group appear tag="ul">
         <li v-for="(item,i) in list" :key="item.id" @click="del(i)">
