--- a/17 组件-创建.html
+++ b/17 组件-创建.html
@@ -35,20 +35,22 @@
 
 </body>
 <script>
+    //-----------------(方式1)--------------------
     // template指向的标签内部只能有一个根结点
     let com_title = Vue.extend({
         template: '<div><h3>this is vue.extend<div><p>hello</p></div>'
     });
 
-    //创建模板对象，如果使用驼峰命名，饮用时要用 -  (方式1)
+    //创建模板对象，如果使用驼峰命名，引用时要用 -
     Vue.component('myCom0', com_title);
 
-    // (方式2)
+
+    //-----------------(方式2)--------------------
     Vue.component('myCom1',Vue.extend({
         template:'<div><h3>this is vue.extend<div><p>hello</p></div>'
     }));
 
-    // (方式3)
+    //-----------------(方式3)--------------------
     Vue.component('myCom2',{
        template: '#tmp'
     });
