--- a/25 传值复习.html
+++ b/25 传值复习.html
@@ -8,15 +8,15 @@
 
 <div id="app">
 
-    <vip_info v-bind:user="user"></vip_info>
+    <vip_info v-bind:prop_user="user"></vip_info>
 
 </div>
 
 
 <template id="vip_info">
     <div>
-        <input type="text" :value="user.id">
-        <input type="text" :value="user.name">
+        <input type="text" :value="prop_user.id">
+        <input type="text" :value="prop_user.name">
     </div>
 </template>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -35,7 +35,17 @@
         components: {
             vip_info: {
                 template: '#vip_info',
-                props:['user'],
+                props: ['prop_user'],
+                // data: function () {
+                //     return {
+                //         child_user: this.prop_user
+                //     }
+                // },
+                // watch: {
+                //     user(val) {
+                //         this.user = val;
+                //     }
+                // }
             }
         }
     })
