锚点2  子传父双向绑定

--- a/25 传值复习.html
+++ b/25 传值复习.html
@@ -8,6 +8,8 @@
 
 <div id="app">
 
+    <p>{{user.id}}</p>
+    <p>{{user.name}}</p>
     <vip_info v-bind:prop_user="user" @on-data-change="update_data"></vip_info>
 
 </div>
