锚点2  子传父双向绑定

--- a/25 传值复习.html
+++ b/25 传值复习.html
@@ -45,7 +45,7 @@
                 props: ['prop_user'],
                 data: function () {
                     return {
-                        child_user: this.prop_user
+                        child_user: null
                     }
                 },
                 watch: {
